first draft impl complete